2012-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/powerpc/dl.c (grub_arch_dl_get_tramp_got_size): Remove
	set but not used variable.

2012-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/reiserfs.c (grub_reiserfs_uuid): Reject 0-uuid as
	created when no uuid support is compiled into mkfs.reiser.

2012-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfs.c (macroman_to_utf8): Convert / to :.
	(utf8_to_macroman): Do the opposite.
	* grub-core/fs/hfsplus.c (grub_hfsplus_iterate_dir): Convert / to :.

2012-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Refise build qemu_mips w/o unifont.

2012-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Eliminate grub_min/grub_max prone to overflow usage.

	* grub-core/bus/usb/usbhub.c (grub_usb_add_hub): Eliminate grub_min.
	(poll_nonroot_hub): Likewise.
	* grub-core/fs/affs.c (grub_affs_iterate_dir): Likewise.
	(grub_affs_label): Likewise.
	* grub-core/fs/btrfs.c (grub_btrfs_lzo_decompress): Likewise.
	* grub-core/fs/hfs.c (grub_hfs_dir): Likewise.
	(grub_hfs_label): Likewise.
	* grub-core/fs/hfsplus.c (grub_hfsplus_cmp_catkey): Likewise.
	* grub-core/fs/zfs/zfs.c (MIN): Remove.
	(zap_leaf_array_equal): Use grub_size. Remove MIN.
	(zap_leaf_array_get): Likewise.
	(dnode_get_path): Likewise.
	* grub-core/io/lzopio.c (grub_lzopio_read): Eliminate grub_min.
	* grub-core/io/xzio.c (grub_xzio_read): Likewise.
	* grub-core/script/execute.c (grub_script_break): Likewise.
	* grub-core/script/lexer.c (grub_script_lexer_record): Eliminate
	grub_max.
	* grub-core/script/yylex.l (grub_lexer_yyrealloc): Likewise.
	* include/grub/misc.h (grub_min): Removed.
	(grub_max): Likewise.

2012-01-14  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* grub-core/fs/ext2.c (grub_ext2_iterate_dir): Ignore entries with
	direct.inode = 0.

2012-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/wctype.h (CHARCLASS_NAME_MAX): New define.
